Initial commit comment Version 1.0.2 addOptionsMenu

--- a/app/src/main/res/values/config_setup.xml
+++ b/app/src/main/res/values/config_setup.xml
@@ -29,8 +29,10 @@
     <bool name="feature_menu_privacy">true</bool>
     <bool name="feature_menu_terms_of_service">true</bool>
     <bool name="feature_menu_version">true</bool>
+
+
     <bool name="feature_rate_us">true</bool>
-    <bool name="feature_share_menu">false</bool>
+    <bool name="feature_share_menu">true</bool>
 
 
     <string name="menu_nav_home">Home</string>
