--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -52,6 +52,7 @@
                         android:layout_height="175dp"
                         android:layout_marginBottom="8dp"
                         android:adjustViewBounds="true"
+                        android:contentDescription="@string/empty"
                         android:scaleType="centerInside"
                         android:src="@drawable/ic_launcher" />
 
@@ -70,6 +71,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:contentDescription="@string/empty"
                             android:onClick="@{(view)-> viewModel.onClickGooglePlay(view)}"
                             android:src="@drawable/ic_about_google_play_black_36dp"
                             app:tint="#0097A7"
@@ -80,6 +82,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:contentDescription="@string/empty"
                             android:onClick="@{(view)-> viewModel.onClickFacebook(view)}"
                             android:src="@drawable/ic_about_facebook_black_36dp"
                             app:tint="#1976D2"
@@ -90,6 +93,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:contentDescription="@string/empty"
                             android:onClick="@{(view)-> viewModel.onClickGroup(view)}"
                             android:src="@drawable/ic_about_account_group_black_36dp"
 
@@ -101,6 +105,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:contentDescription="@string/empty"
                             android:onClick="@{(view)-> viewModel.onClickYoutube(view)}"
                             android:src="@drawable/ic_about_youtube_black_36dp"
 
@@ -112,6 +117,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:contentDescription="@string/empty"
                             android:onClick="@{(view)-> viewModel.onClickGithub(view)}"
                             android:src="@drawable/ic_about_github_circle_black_36dp"
 
@@ -123,11 +129,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:contentDescription="@string/empty"
                             android:onClick="@{(view)-> viewModel.onClickWeb(view)}"
                             android:src="@drawable/ic_about_web_black_36dp"
                             app:tint="#388E3C"
                             android:visibility="@{TextUtils.isEmpty(viewModel.officeInfo.getWebUrl()) ? View.GONE : View.VISIBLE}" />
-
 
                     </LinearLayout>
 
@@ -136,7 +142,6 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/officeAboutRecyclerView"
                     android:layout_width="match_parent"
-
                     android:background="@color/appBackground"
                     android:layout_height="wrap_content" />
 
